<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/txvTitle"
        style="@style/mainTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_message_textField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearAllEvents"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="60dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvTitle"
        android:gravity="center">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


            <LinearLayout
                android:id="@+id/linearMen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_layout_marginBottom"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView1"
                        style="@style/subTitleGuestsTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/guests_men_textField" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewMen"
                        android:layout_width="@dimen/avatar_image_width"
                        android:layout_height="@dimen/avatar_image_height"
                        android:layout_weight="@integer/avatar_layout_weight"
                        app:srcCompat="@drawable/man" />


                    <com.warkiz.widget.IndicatorStayLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="@integer/seekBar_layout_weight">

                        <com.warkiz.widget.IndicatorSeekBar
                            android:id="@+id/indSeekBarMen"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:isb_progress="0"
                            app:isb_show_indicator="circular_bubble"
                            app:isb_thumb_drawable="@drawable/selector_thumb_ripple_drawable"
                            app:isb_thumb_size="26dp" />
                    </com.warkiz.widget.IndicatorStayLayout>
            </LinearLayout>



                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearWomen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/item_layout_marginBottom"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView2"
                            style="@style/subTitleGuestsTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/guests_women_textField" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageViewWomen"
                            android:layout_width="@dimen/avatar_image_width"
                            android:layout_height="@dimen/avatar_image_height"
                            android:layout_weight="@integer/avatar_layout_weight"
                            app:srcCompat="@drawable/woman" />


                        <com.warkiz.widget.IndicatorStayLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="@integer/seekBar_layout_weight">

                            <com.warkiz.widget.IndicatorSeekBar
                                android:id="@+id/indSeekBarWomen"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:isb_progress="0"
                                app:isb_show_indicator="circular_bubble"
                                app:isb_thumb_drawable="@drawable/selector_thumb_ripple_drawable"
                                app:isb_thumb_size="26dp" />
                        </com.warkiz.widget.IndicatorStayLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearChildren"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/item_layout_marginBottom"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView3"
                            style="@style/subTitleGuestsTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/guests_children_textField" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageViewChildren"
                            android:layout_width="@dimen/avatar_image_width"
                            android:layout_height="@dimen/avatar_image_height"
                            android:layout_weight="@integer/avatar_layout_weight"
                            app:srcCompat="@drawable/child" />


                        <com.warkiz.widget.IndicatorStayLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="@integer/seekBar_layout_weight">

                            <com.warkiz.widget.IndicatorSeekBar
                                android:id="@+id/indSeekBarChildren"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:isb_progress="0"
                                app:isb_show_indicator="circular_bubble"
                                app:isb_thumb_drawable="@drawable/selector_thumb_ripple_drawable"
                                app:isb_thumb_size="26dp" />
                        </com.warkiz.widget.IndicatorStayLayout>

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/colorAccent"
                    tools:visibility="visible" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/linearTotal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_textField"
                        style="@style/subTotalGuestsTextView"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txvTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        style="@style/subTotalNumberGuestsTextView"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>


        </ScrollView>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="NextActivity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/next" />

</androidx.constraintlayout.widget.ConstraintLayout>